Added name to style css

--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,10 @@
-<<<<<<< HEAD
 /* Test, Josephine */
 /* Emimly */
+/* Brier */
 * {
   box-sizing: border-box;
 }
 
-=======
-* {
-  box-sizing: border-box;
-}
-
->>>>>>> web2
 html,
 body {
   margin: 0;
