--- a/public/support-us.css
+++ b/public/support-us.css
@@ -31,7 +31,9 @@ main {
 }
 
 .northwest-photo {
-  padding-bottom: 104px;
+  margin-bottom: 104px;
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .how-to-get-involved {
@@ -39,7 +41,7 @@ main {
   width: 1126px;
   border-radius: 24px;
   padding: 64px 75px;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 104px;
 }
 
@@ -66,6 +68,7 @@ main {
   background-color: #CF1D2D;
   margin-top: 16px;
   cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .support-method-text {
