--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "roboto", sans-serif;
-  background-color: #f8f5f4;
+  background-color: #F5F5F5;
 }
 
 h1 {
@@ -82,6 +82,37 @@ nav {
   color: white;
   background: #cf1d2d;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+/* Footer */
+footer {
+  display: flex;
+  width: 100%;
+  padding: 64px 128px;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: white;
+}
+
+.footer-logo {
+  max-width: 300px;
+  max-height: 90px;
+}
+
+.footer-info {
+  width: 720px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.footer-address {
+  width: 190px;
+}
+
+.footer-section a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* Landing Page */
