--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ p {
 /* Nav Bar */
 
 nav {
-  max-width: 1200px;
+  max-width: 1126px;
   width: 100%;
   max-height: 80px;
   padding: 16px 32px;
@@ -86,10 +86,15 @@ nav {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-/* Landing Page */
-.landing-photo {
+.banner {
   width: 100%;
-  height: 740px;
+  height: 500px;
+  /* position: absolute; */
+  object-fit: cover;
+  z-index: 1;
+  align-self: stretch;
+  background: url("./img/summer_header.png") lightgray -0.396px -378.58px / 100%
+    215.898% no-repeat;
 }
 
 /* Media Queries - these are responsible for page responsiveness */
@@ -105,4 +110,177 @@ nav {
 }
 
 @media (min-width: 1200px) {
+}
+
+#header-text-div {
+  position: absolute;
+  z-index: 2;
+  top: 215px;
+  left: 152px;
+}
+
+.header-text {
+  color: white;
+}
+
+h1 {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 900;
+  margin-bottom: 0;
+  line-height: 125%; /* 100px */
+}
+
+#page-desc {
+  margin-top: 20px;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%; /* 22.5px */
+  letter-spacing: -0.198px;
+}
+
+#introduction {
+  display: flex;
+  /* width: 1126px; */
+  width: 78vw;
+  padding: 64px 75px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+  border-radius: 24px;
+  background: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 128px;
+}
+
+#intro-header {
+  color: #000;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 54px */
+  letter-spacing: -0.684px;
+  /* margin-bottom: 32px; */
+  margin-bottom: 0;
+  padding: 0;
+}
+
+#intro-desc {
+  margin-top: 0;
+  padding: 0;
+  color: #6b6b6b;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
+  letter-spacing: -0.342px;
+}
+
+.centered-section {
+  display: flex;
+  width: 100vw;
+  /* width: 1440px; */
+  flex-direction: column;
+  align-items: center;
+  gap: 128px;
+}
+
+#course-gallery {
+  /* display: flex;
+  width: 1440px;
+  flex-direction: column;
+  align-items: center;
+  gap: 128px; */
+  display: inline-flex;
+  height: 610.886px;
+  align-items: flex-start;
+  gap: 38px;
+  flex-shrink: 0;
+}
+
+.course {
+  display: flex;
+  width: 300px;
+  height: 610.886px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 21px;
+}
+
+.course-info {
+  display: flex;
+  height: 273px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  flex-shrink: 0;
+  align-self: stretch;
+}
+
+.course-img {
+  display: flex;
+  height: 300px;
+  /* padding: 0px var(--column-column-lg, 12px); */
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  align-self: stretch;
+  border-radius: 7.692px;
+  background: lightgray 50% / cover no-repeat;
+  box-shadow: 0px 1.282px 2.564px 0px rgba(0, 0, 0, 0.25);
+  object-fit: cover;
+}
+
+.course-name {
+  color: #000;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 27px */
+  letter-spacing: -0.342px;
+}
+
+.course-desc {
+  color: #6b6b6b;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
+  letter-spacing: -0.342px;
+  align-self: stretch;
+  margin: 0;
+}
+
+.course-enroll {
+  display: flex;
+  width: 200px;
+  height: 36px;
+  padding: 14px 38px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
+  letter-spacing: -0.342px;
+  background: #cf1d2d;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
