--- a/public/style.css
+++ b/public/style.css
@@ -11,20 +11,36 @@ body {
 }
 
 h1 {
-  font-size: 36px;
-  color: black;
-  font-weight: bold;
+  color: #fff;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 900;
+  margin-bottom: 0;
+  line-height: 150%;
 }
 
 h2 {
+  color: #000;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin: 0;
+}
+
+h3 {
+  color: #000;
   font-size: 18px;
-  color: black;
-  font-weight: bold;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin: 0;
 }
 
 p {
   font-size: 18px;
   color: #6b6b6b;
+  margin: 0;
 }
 
 /* Nav Bar */
@@ -115,63 +131,42 @@ footer {
   text-decoration: none;
 }
 
-/* Landing Page */
-.landing-photo {
-  width: 100%;
-  height: 500px;
-  /* position: absolute; */
-  object-fit: cover;
-  z-index: 1;
-  align-self: stretch;
-  background: url("./img/summer_header.png") lightgray -0.396px -378.58px / 100%
-    215.898% no-repeat;
-}
+/* Summer Courses */
 
 .banner {
   width: 100%;
-  height: 500px;
-  /* position: absolute; */
+  height: calc(100vw / 3.5);
   object-fit: cover;
   z-index: 1;
   align-self: stretch;
-  background: url("./img/summer_header.png") lightgray -0.396px -378.58px / 100%
+  background: lightgray -0.396px -378.58px / 100%
     215.898% no-repeat;
 }
 
-/* Media Queries - these are responsible for page responsiveness */
-/* Don't worry about these for now */
-
-@media (min-width: 598px) {
-}
-
-@media (min-width: 768px) {
-}
-
-@media (min-width: 992px) {
-}
-
-@media (min-width: 1200px) {
+#center-header-div {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100vw / 3.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
 }
 
 #header-text-div {
-  position: absolute;
-  z-index: 2;
-  top: 215px;
-  left: 152px;
+  display: flex;
+  width: 1126px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: var(--margin-margin-sm, 20px);
 }
+
 
 .header-text {
   color: white;
-}
-
-h1 {
-  color: #fff;
-  font-family: Roboto;
-  font-size: 80px;
-  font-style: normal;
-  font-weight: 900;
-  margin-bottom: 0;
-  line-height: 125%; /* 100px */
 }
 
 #page-desc {
@@ -186,10 +181,9 @@ h1 {
 }
 
 #introduction {
-  display: flex;
-  /* width: 1126px; */
-  width: 78vw;
+  width: 1126px;
   padding: 64px 75px;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -198,19 +192,6 @@ h1 {
   background: #fff;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
   margin-top: 128px;
-}
-
-#intro-header {
-  color: #000;
-  font-family: Roboto;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 54px */
-  letter-spacing: -0.684px;
-  /* margin-bottom: 32px; */
-  margin-bottom: 0;
-  padding: 0;
 }
 
 #intro-desc {
@@ -245,6 +226,7 @@ h1 {
   align-items: flex-start;
   gap: 38px;
   flex-shrink: 0;
+  margin-top: 32px;
 }
 
 .course {
@@ -258,7 +240,7 @@ h1 {
 
 .course-info {
   display: flex;
-  height: 273px;
+  height: auto;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
@@ -282,23 +264,11 @@ h1 {
 }
 
 .course-name {
-  color: #000;
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 27px */
-  letter-spacing: -0.342px;
+  align-self: stretch;
+  margin: 0;
 }
 
 .course-desc {
-  color: #6b6b6b;
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 27px */
-  letter-spacing: -0.342px;
   align-self: stretch;
   margin: 0;
 }
@@ -328,4 +298,19 @@ h1 {
 
 #courses {
   margin-bottom: 146px;
+}
+
+/* Media Queries - these are responsible for page responsiveness */
+/* Don't worry about these for now */
+
+@media (min-width: 598px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
 }
