--- a/public/style.css
+++ b/public/style.css
@@ -8,11 +8,12 @@ body {
   padding: 0;
   font-family: "roboto", sans-serif;
   background-color: #f5f5f5;
+  font-size: 62.5%;
 }
 
 h1 {
   color: #fff;
-  font-size: 80px;
+  font-size: 8rem;
   font-style: normal;
   font-weight: 900;
   margin-bottom: 0;
@@ -21,7 +22,7 @@ h1 {
 
 h2 {
   color: #000;
-  font-size: 36px;
+  font-size: 3.6rem;
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
@@ -30,7 +31,7 @@ h2 {
 
 h3 {
   color: #000;
-  font-size: 18px;
+  font-size: 1.8rem;
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
@@ -38,8 +39,9 @@ h3 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 1.8rem;
   color: #6b6b6b;
+  line-height: 150%;
   margin: 0;
 }
 
@@ -110,6 +112,14 @@ footer {
   background-color: white;
 }
 
+.footer-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-self: stretch;
+}
+
 .footer-logo {
   max-width: 300px;
   max-height: 90px;
@@ -122,6 +132,10 @@ footer {
   align-items: flex-start;
 }
 
+.footer-info h3{
+  margin-bottom: 12px;
+}
+
 .footer-address {
   width: 190px;
 }
@@ -129,6 +143,11 @@ footer {
 .footer-section a {
   color: inherit;
   text-decoration: none;
+  margin-bottom: 4px;
+}
+
+.footer-section p {
+  margin-bottom: 4px;
 }
 
 /* Summer Courses */
