--- a/public/style.css
+++ b/public/style.css
@@ -154,13 +154,10 @@ footer {
 /* Summer Courses */
 
 .banner {
+  filter: brightness(70%);
   width: 100%;
   height: calc(100vw / 3.5);
   object-fit: cover;
-  z-index: 1;
-  align-self: stretch;
-  background: lightgray -0.396px -378.58px / 100%
-    215.898% no-repeat;
 }
 
 #center-header-div {
@@ -173,10 +170,9 @@ footer {
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 128px;
-  z-index: 2;
 }
 
-#header-text-div {
+#header-text-div-1 {
   display: flex;
   width: 1126px;
   flex-direction: column;
@@ -313,6 +309,114 @@ footer {
 #courses {
   margin-bottom: 146px;
 }
+
+/* About Us */
+#header-text-div-2 {
+  display: flex;
+  width: 1126px;
+  align-items: flex-end;
+  gap: 80px;
+}
+
+#header-text-div-2 h1 {
+  color: black;
+  line-height: 125%;
+}
+
+#header-text-div-2 p {
+  text-align: right;
+}
+
+.about-description-div {
+  display: flex;
+  max-width: 976px;
+  align-items: center;
+  gap: 64px;
+}
+
+.about-description-div img {
+  flex-grow: 1;
+  max-width: 612px;
+  height: auto;
+  border-radius: 24px;
+}
+
+.about-description {
+  max-width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  flex-shrink: 0;
+}
+
+.outer-achievements-div {
+  display: flex;
+  padding: 64px 157px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--column-column-md, 8px);
+  align-self: stretch;
+  background-color: #CF1D2D;
+}
+
+.inner-achievements-div {
+  display: flex;
+  width: 1126px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.stat p:nth-child(1) {
+  align-self: stretch;
+  color: white;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 100%;
+}
+
+.stat p:nth-child(2) {
+  align-self: stretch;
+  color: white;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.outer-values-div {
+  display: flex;
+  width: 976px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+.inner-values-div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.value-div {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
+}
+
 
 /* Media Queries - these are responsible for page responsiveness */
 /* Don't worry about these for now */
