--- a/public/style.css
+++ b/public/style.css
@@ -61,7 +61,7 @@ nav {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 
   position: fixed; /* Fix the position */
-  top: 16px; /* Position it 64px from the top of the screen */
+  top: 16px;
   left: 50%; /* Center the nav bar horizontally */
   transform: translateX(
     -50%
@@ -101,6 +101,10 @@ nav {
   color: white;
   background: #cf1d2d;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.nav-links li:last-child a:hover {
+  filter: brightness(90%);
 }
 
 /* Footer */
@@ -417,6 +421,159 @@ footer {
   align-items: flex-start;
 }
 
+.outer-goals-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  margin-bottom: 128px;
+}
+
+.inner-goals-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 64px;
+}
+
+.goal {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  width: 976px;
+  justify-content: space-between;
+}
+
+.goal img {
+  max-width: 425px;
+  height: auto;
+  border-radius: 24px;
+}
+
+.goal-description-right, .goal-description-left {
+  max-width: 425px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.goal-description-right {
+  align-items: flex-start;
+}
+
+.goal-description-left {
+  align-items: flex-end;
+}
+
+.goal-description-left p {
+  text-align: right;
+}
+
+.goal-description-right p {
+  text-align: left;
+}
+
+/* Contact Page */
+
+.centered-section-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin-bottom: 128px;
+}
+
+.contact-div {
+  display: flex;
+  padding: 64px 75px;
+  align-items: flex-start;
+  background-color: white;
+  border-radius: 24px;
+  margin-top: 112px;
+  gap: 128px;
+}
+
+.contact-form, .more-contacts-div{
+  display: flex;
+  width: 420px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+.contact-input {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+input, textarea {
+  display: flex;
+  width: auto;
+  padding: 14px 16px;
+  align-items: center;
+  border-radius: 8px;
+  background: white;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  resize: none;
+  font-family: "roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #D0D0D0;
+  font-family: "roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.primary-button {
+  display: flex;
+  height: 36px;
+  padding: 14px 16px;
+  align-items: center;  
+  align-self: stretch;
+  border-radius: 8px;
+  background: #CF1D2D;
+  border: none;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.primary-button:hover {
+  filter: brightness(90%);
+}
+
+.primary-button p {
+  color: white;
+  font-size: 18px;
+}
+
+.contact-link-div {
+  display: flex;
+  gap: 64px;
+}
+
+.contact-links h3{
+  margin-bottom: 8px;
+}
+
+.phonenumber {
+  text-decoration: none;
+}
+
+.social-links-div {
+  display: flex;
+  justify-content: space-between;
+}
 
 /* Media Queries - these are responsible for page responsiveness */
 /* Don't worry about these for now */
