--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-  color: #fff;
+  color: #fff; /* Might want to change, as not all h1 titles are white */
   font-size: 80px;
   font-style: normal;
   font-weight: 900;
@@ -25,6 +25,7 @@ h2 {
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
+  letter-spacing: -0.019em;
   margin: 0;
 }
 
@@ -34,12 +35,14 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
+  letter-spacing: -0.019em;
   margin: 0;
 }
 
 p {
   font-size: 18px;
   color: #6b6b6b;
+  letter-spacing: -0.019em;
   margin: 0;
 }
 
