Made css all into one file

--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,10 @@ p {
   margin: 0;
 }
 
+main p {
+  letter-spacing: -0.019em; /* -1.9% */
+}
+
 /* Nav Bar */
 nav {
   width: 100vw;
@@ -258,7 +262,6 @@ footer {
   align-items: flex-start;
 }
 
-
 .header-text {
   line-height: 100%;
   margin: 0;
@@ -408,7 +411,6 @@ footer {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 
 }
-
 
 .photo-section img {
   flex: 1 0 0;
@@ -660,6 +662,198 @@ input::placeholder, textarea::placeholder {
   justify-content: space-between;
 }
 
+/* Support Us Page */
+#support-header-text-div{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  max-width: 1126px;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+#support-header-text-div h1 {
+  color: black;
+  line-height: 125%;
+}
+
+#support-header-text-div p {
+  text-align: left;
+}
+
+#northwest-photo {
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+#how-to-get-involved {
+  background-color: white;
+  width: 1126px;
+  border-radius: 24px;
+  padding: 64px 75px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+#how-to-get-involved h2 {
+  margin-bottom: 32px;
+}
+
+#support-grid {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-gap: 64px;
+  row-gap: 64px;
+}
+
+.support-method button {
+  width: 200px;
+  height: 36px;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  background-color: #CF1D2D;
+  margin-top: 16px;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.support-method p {
+  margin-top: 16px;
+}
+
+.support-method h3 {
+  margin-top: 16px;
+}
+
+/* Competetive Teams Pages */
+.title-background-image {
+  width: 100%;
+  height: 500px;
+}
+
+.title-container {
+  position: absolute;
+  top: 215px;
+  width: 1126px;
+}
+
+.title-container h3 {
+  margin-top: 25px;
+  margin-bottom: 40px;
+  color: white;
+}
+
+.title-container button {
+  background-color: #CF1D2D;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  width: 200px;
+  height: 36px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.division-overview {
+  width: 1126px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.overview-content {
+  width: 760px;
+  background-color: white;
+  border-radius: 24px;
+  padding: 64px 75px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.overview-content p {
+  margin-top: 32px;
+  line-height: 150%;
+  width: 584px;
+}
+
+.division-img {
+  width: 300px;
+  border-radius: 28.8px;
+}
+
+.educational-outcomes {
+  width: 1126px;
+  padding: 0px 75px;
+}
+
+.educational-outcomes h2 {
+  margin-bottom: 32px;
+  line-height: 54px;
+}
+
+.educational-outcomes-grid {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-column-gap: 64px;
+}
+
+.educational-outcome p {
+  margin-top: 16px;
+}
+
+.education-icon-container {
+  background-color: white;
+  display: inline-block;
+  padding: 12px;
+  border-radius: 7.69px;
+  height: 74px;
+  box-shadow: 0px 1.28px 2.56px rgba(0, 0, 0, 0.25);
+  margin-bottom: 16px;
+}
+
+.resources {
+  width: 1126px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.schedule {
+  background-color: white;
+  padding: 64px 75px;
+  width: 681px;
+  height: 389px;
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.support {
+  background-color: white;
+  padding: 64px 75px;
+  width: 381px;
+  height: 418px;
+  border-radius: 24px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.season-schedule {
+  display: flex;
+  justify-content: space-between;
+}
+
+.season-schedule div p {
+  margin-top: 8px;
+}
+
+.support {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 /* Media Queries - these are responsible for page responsiveness */
 /* Don't worry about these for now */
 
@@ -705,7 +899,7 @@ input::placeholder, textarea::placeholder {
     font-size: 62.5%;
   }
 
-  #header-text-div-2 {
+  #header-text-div-2,#support-header-text-div {
     flex-direction: row;
     gap: 80px;
     align-items: flex-end;
@@ -713,6 +907,11 @@ input::placeholder, textarea::placeholder {
 
   #header-text-div-2 p {
     text-align: right;
+  }
+
+  #support-header-text-div p {
+    text-align: right;
+    max-width: 410px;
   }
 
   .centered-section {
