--- a/public/style.css
+++ b/public/style.css
@@ -133,7 +133,7 @@ footer {
   align-items: flex-start;
 }
 
-.footer-info h3{
+.footer-info h3 {
   margin-bottom: 12px;
 }
 
@@ -159,8 +159,7 @@ footer {
   object-fit: cover;
   z-index: 1;
   align-self: stretch;
-  background: lightgray -0.396px -378.58px / 100%
-    215.898% no-repeat;
+  background: lightgray -0.396px -378.58px / 100% 215.898% no-repeat;
 }
 
 #center-header-div {
@@ -183,7 +182,6 @@ footer {
   justify-content: flex-end;
   align-items: flex-start;
 }
-
 
 .header-text {
   line-height: 100%;
@@ -327,4 +325,18 @@ footer {
 }
 
 @media (min-width: 1200px) {
+}
+
+#login-box {
+  display: flex;
+  padding: 64px 32px;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+  border-radius: 24px;
+  background: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 204px;
+  margin-left: 33vw;
+  margin-right: 33vw;
 }
