--- a/public/style.css
+++ b/public/style.css
@@ -111,6 +111,10 @@ nav > div {
   filter: brightness(90%);
 }
 
+.nav-links li:last-child {
+  display: none;
+}
+
 /* Hamburger menu */
 #hamburger-menu {
   cursor: pointer;
@@ -287,11 +291,14 @@ footer {
 .centered-section {
   display: flex;
   width: 100vw;
-  /* width: 1440px; */
   flex-direction: column;
   align-items: center;
   gap: 64px;
   margin-bottom: 64px;
+}
+
+.centered-section.program {
+  margin-top: 128px;
 }
 
 .centered-seciton p {
@@ -299,10 +306,12 @@ footer {
 }
 
 #course-gallery {
-  display: inline-flex;
-  height: 610.886px;
+  max-width: 976px;
+  display: flex;
   align-items: flex-start;
-  gap: 38px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 32px;
   flex-shrink: 0;
   margin-top: 32px;
 }
@@ -313,7 +322,7 @@ footer {
 
 .course {
   display: flex;
-  width: 300px;
+  max-width: 300px;
   height: 610.886px;
   flex-direction: column;
   align-items: flex-start;
@@ -354,31 +363,8 @@ footer {
   margin: 0;
 }
 
-.course-enroll {
-  display: flex;
-  width: 200px;
-  height: 36px;
-  padding: 14px 38px;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  border: none;
-  color: #fff;
-  text-align: center;
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 27px */
-  letter-spacing: -0.342px;
-  background: #cf1d2d;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
 #courses {
-  margin-bottom: 146px;
+  margin-bottom: 128px;
 }
 
 /* About Us */
@@ -500,6 +486,18 @@ footer {
 
 .primary-section.summer-intro {
   margin-top: 128px;
+}
+
+.primary-section.program {
+  max-width: 760px;
+}
+
+.primary-section.program-resource {
+  gap: 16px;
+}
+
+.program-support, .program-support p {
+  margin-top: 16px;
 }
 
 .outer-div {
@@ -691,37 +689,18 @@ textarea::placeholder {
 #northwest-photo {
   border-radius: 24px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-#how-to-get-involved {
-  background-color: white;
-  width: 1126px;
-  border-radius: 24px;
-  padding: 64px 75px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-#how-to-get-involved h2 {
-  margin-bottom: 32px;
+  width: calc(100% - 64px);
+  max-width: 1126px;
 }
 
 #support-grid {
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-gap: 64px;
-  row-gap: 64px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 64px;
 }
 
-.support-method button {
-  width: 200px;
-  height: 36px;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  background-color: #CF1D2D;
-  margin-top: 16px;
-  cursor: pointer;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+.support-method {
+  width: 100%;
 }
 
 .support-method p {
@@ -750,27 +729,41 @@ textarea::placeholder {
   color: white;
 }
 
-.title-container button {
+button {
   background-color: #CF1D2D;
   border: none;
   border-radius: 8px;
   color: white;
-  width: 200px;
+  padding: 16px 36px;
   height: 36px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   font-size: 18px;
   cursor: pointer;
-}
-
-.division-overview {
-  width: 1126px;
+  margin-top: 32px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
+.course-info button {
+  margin-top: 0px;
+}
+
+.button:hover {
+    filter: brightness(90%);
+}
+
+.division-overview {
+  max-width: 1126px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 64px;
+}
+
 .overview-content {
-  width: 760px;
+  max-width: 760px;
   background-color: white;
   border-radius: 24px;
   padding: 64px 75px;
@@ -784,24 +777,27 @@ textarea::placeholder {
 }
 
 .division-img {
-  width: 300px;
-  border-radius: 28.8px;
+  max-width: 300px;
+  border-radius: 24px;
 }
 
-.educational-outcomes {
-  width: 1126px;
-  padding: 0px 75px;
+.educational-outcome {
+  width: 100%;
 }
 
 .educational-outcomes h2 {
   margin-bottom: 32px;
   line-height: 54px;
+  text-align: left;
 }
 
 .educational-outcomes-grid {
-  display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-column-gap: 64px;
+  display: flex;
+  max-width: 976px;
+  width: auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 64px;
 }
 
 .educational-outcome p {
@@ -819,9 +815,11 @@ textarea::placeholder {
 }
 
 .resources {
-  width: 1126px;
+  max-width: 1126px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 64px;
 }
 
 .schedule {
@@ -848,7 +846,8 @@ textarea::placeholder {
 
 .season-schedule {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 32px;
 }
 
 .season-schedule div p {
@@ -888,6 +887,22 @@ textarea::placeholder {
   .value-div {
     width: calc(50% - 8px);
   }
+
+
+.educational-outcomes h2 {
+  margin-bottom: 32px;
+  line-height: 54px;
+  text-align: left;
+}
+
+.educational-outcomes-grid {
+  display: flex;
+  max-width: 976px;
+  width: auto;
+  flex-wrap: wrap;
+  gap: 64px;
+}
+
 }
 
 @media (min-width: 768px) {
@@ -899,6 +914,14 @@ textarea::placeholder {
 
   .centered-section {
     margin-bottom: 128px;
+  }
+
+  .educational-outcome {
+  max-width: 275px;
+  }
+
+  .support-method {
+    max-width: 275px;
   }
 }
 
