--- a/public/style.css
+++ b/public/style.css
@@ -227,6 +227,10 @@ footer {
   text-align: center;
 }
 
+.footer-section p:last-child, .footer-section p:nth-child(5) {
+  display: none;
+}
+
 /* Summer Courses */
 
 .banner {
