--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,7 @@ nav > div {
   width: 1126px;
   height: 100%;
   padding: 16px 0px;
+  margin: 0px 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -118,12 +119,12 @@ nav > div {
 /* Hamburger menu */
 #hamburger-menu {
   cursor: pointer;
-  display: block; /* Ensure it shows up on mobile */
+  display: block;
 }
 
 /* Popup menu (initially hidden) */
 .popup-menu {
-  display: none; /* Initially hidden */
+  display: none;
   position: fixed;
   top: 80px;
   right: 0;
@@ -131,13 +132,13 @@ nav > div {
   height: 100vh;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 999;
-  transition: all 0.3s ease-in-out; /* Add a transition effect */
+  transition: all 0.3s ease-in-out;
 }
 
 .popup-menu.active {
-  display: block; /* Show the popup when active */
+  display: block;
   right: 0;
-  top: 80px; /* Ensure correct positioning */
+  top: 80px;
 }
 
 .popup-nav-links {
@@ -147,6 +148,12 @@ nav > div {
   flex-direction: column;
   align-items: center;
   gap: 16px;
+}
+
+/* Close button for the popup (optional for improved UX) */
+.popup-menu-close {
+  position: absolute;
+  top: 20px;
 }
 
 .popup-nav-links > li > a {
@@ -160,12 +167,6 @@ nav > div {
 
 .popup-nav-links > li > a:hover {
   color: #cf1d2d; /* Add a hover effect for the links */
-}
-
-/* Close button for the popup (optional for improved UX) */
-.popup-menu-close {
-  position: absolute;
-  top: 20px;
 }
 
 /* Footer */
@@ -546,9 +547,9 @@ footer {
   padding: 24px 32px;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  gap: 64px;
+  gap: 16px;
 }
 
 .goal img {
